{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 14,
  "lineage": "0e6a853b-cb5a-d935-e8da-4cd0d871db22",
  "resources": [
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "test_eip",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b790dfa9348c6ab",
            "arn": "arn:aws:ec2:us-east-1:992382822158:elastic-ip/eipalloc-04b790dfa9348c6ab",
            "domain": "vpc",
            "id": "eipalloc-04b790dfa9348c6ab",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-194-154-171.compute-1.amazonaws.com",
            "public_ip": "44.194.154.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mukesh-eip"
            },
            "tags_all": {
              "Name": "mukesh-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:internet-gateway/igw-0ce95d77fb7dc6463",
            "id": "igw-0ce95d77fb7dc6463",
            "owner_id": "992382822158",
            "tags": {
              "Name": "mukesh-igw"
            },
            "tags_all": {
              "Name": "mukesh-igw"
            },
            "vpc_id": "vpc-0ee9c0b1c016040aa"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test_nat_gateway",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b790dfa9348c6ab",
            "association_id": "eipassoc-0fe95a38eae702f8d",
            "connectivity_type": "public",
            "id": "nat-0c5d397195e9bf7f9",
            "network_interface_id": "eni-00d839c489f03b755",
            "private_ip": "10.0.0.10",
            "public_ip": "44.194.154.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-054a23082be1c4b01",
            "tags": {
              "Name": "mukesh-nat-gateway"
            },
            "tags_all": {
              "Name": "mukesh-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc_module.aws_eip.test_eip",
            "module.vpc_module.aws_internet_gateway.test_igw",
            "module.vpc_module.aws_subnet.public_subnet_test",
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:route-table/rtb-05c88a373f2cbc8a5",
            "id": "rtb-05c88a373f2cbc8a5",
            "owner_id": "992382822158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c5d397195e9bf7f9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mukesh-private-rt"
            },
            "tags_all": {
              "Name": "mukesh-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee9c0b1c016040aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_eip.test_eip",
            "module.vpc_module.aws_internet_gateway.test_igw",
            "module.vpc_module.aws_nat_gateway.test_nat_gateway",
            "module.vpc_module.aws_subnet.public_subnet_test",
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:route-table/rtb-062d21391f41c23b1",
            "id": "rtb-062d21391f41c23b1",
            "owner_id": "992382822158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce95d77fb7dc6463",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mukesh-public-rt"
            },
            "tags_all": {
              "Name": "mukesh-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee9c0b1c016040aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.test_igw",
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecf0c88cc0fc03c8",
            "route_table_id": "rtb-05c88a373f2cbc8a5",
            "subnet_id": "subnet-03b171e573347ecec"
          },
          "dependencies": [
            "module.vpc_module.aws_eip.test_eip",
            "module.vpc_module.aws_internet_gateway.test_igw",
            "module.vpc_module.aws_nat_gateway.test_nat_gateway",
            "module.vpc_module.aws_route_table.private_rt",
            "module.vpc_module.aws_subnet.private_subnet_test",
            "module.vpc_module.aws_subnet.public_subnet_test",
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8f37a31c5bad3ed",
            "route_table_id": "rtb-062d21391f41c23b1",
            "subnet_id": "subnet-054a23082be1c4b01"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.test_igw",
            "module.vpc_module.aws_route_table.public_rt",
            "module.vpc_module.aws_subnet.public_subnet_test",
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_test",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:subnet/subnet-03b171e573347ecec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b171e573347ecec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382822158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mukesh-private-subnet"
            },
            "tags_all": {
              "Name": "mukesh-private-subnet"
            },
            "vpc_id": "vpc-0ee9c0b1c016040aa"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_test",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:subnet/subnet-054a23082be1c4b01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054a23082be1c4b01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382822158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mukesh-public-subnet"
            },
            "tags_all": {
              "Name": "mukesh-public-subnet"
            },
            "vpc_id": "vpc-0ee9c0b1c016040aa"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.test_igw",
            "module.vpc_module.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:vpc/vpc-0ee9c0b1c016040aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/27",
            "default_network_acl_id": "acl-079cb5984ada89101",
            "default_route_table_id": "rtb-09818479877b595a5",
            "default_security_group_id": "sg-06eae508934245b4e",
            "dhcp_options_id": "dopt-07f08856e16649025",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ee9c0b1c016040aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09818479877b595a5",
            "owner_id": "992382822158",
            "tags": {
              "Name": "mukesh-vpc"
            },
            "tags_all": {
              "Name": "mukesh-vpc"
            }
          }
        }
      ]
    }
  ]
}